# monioc

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: build.yml  nextjs.yml  release.yml
app/: .env.example  .eslintrc.cjs  index.html  playwright.config.ts  tsconfig.json  vite.config.ts
app/data/: requirements.txt
app/scripts/: build-grocery-db.py  build-grocery-db.sh  setup-python-deps.py
app/scripts/macos/: build-notarized-dmg.sh  notarization.env.example  setup-python-deps.sh
app/src/: App.css  App.tsx  constants.ts  index.css  index.tsx  types.ts  vite-env.d.ts
app/src-tauri/: Cargo.toml  build.rs  categorize_items.py  check_models.py  entitlements.mac.plist  process_statscan_to_sqlite.py  scan_receipt.py  tauri.conf.json  test_categorize_items.py  test_scan_receipt.py
app/src-tauri/capabilities/: default.json  sign-in-window.json
app/src-tauri/icons/: icon.icns
app/src-tauri/scripts/windows/: setup-python-env.ps1
app/src-tauri/src/: error.rs  events.rs  job_queue.rs  lib.rs  main.rs  utils.rs
app/src-tauri/src/commands/: backup.rs  category.rs  grocery.rs  image_library.rs  misc.rs  mod.rs  python_setup.rs  receipt.rs
app/src-tauri/src/db/: category.rs  connection.rs  grocery.rs  image_library.rs  mod.rs  receipt.rs
app/src-tauri/src/image_ops/: exif.rs  mod.rs  pipeline.rs  storage.rs
app/src-tauri/src/python/: interpreter.rs  mod.rs
app/src-tauri/src/services/: mod.rs  receipt.rs
docs/: 404.html  BUILD.md  CONTRIBUTING.md  GETTING_STARTED.md  __next.__PAGE__.txt  __next._head.txt  __next._index.txt  __next._tree.txt  index.html  index.txt
docs/_not-found/: __next._head.txt  __next._not-found.__PAGE__.txt  __next._not-found.txt  __next._tree.txt  index.txt
landing/: next.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
landing/src/: constants.ts
scripts/: ci.sh  install-hooks.sh
(+286 files in other folders)
